data/derived/sp14/progs/unify/prog0139.ml.out
Characters 25-45:
  let _ = sepConcat "---" ["Akshat", "Vasavada"];;
                           ^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type string
